--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "watch.js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build.js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build.js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cookies-parser": "^1.2.0",
     "dotenv": "^16.4.5",
