--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "learning node, express and mongodb",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "watch.js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build.js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
